--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -2,17 +2,12 @@
 
 \chapter*{Acknowledgments}
 \addcontentsline{toc}{section}{Acknowledgements}
-First, I would like to thank my supervisors, Nikola Paunkovi\'{c} and Paulo Mateus. Their scientific, pedagogical and personal qualities are uncountable and I really feel lucky that they were the ones to guide me and support me all this time. I am also grateful to Prof. V\'{i}tor Vieira, who was always available and caring.\\
-Moreover, I would like to thank Andr\'{e} Souto, Walter Krawec and Oscar Viyuela. It was a great experience for me to collaborate with them. I am also grateful to Marcus Huber and Jiannis Pachos for hosting me in their groups during my two internships and giving me the opportunity to learn a great deal from them.\\
-The most enjoyable moments of work I spent with Nikola and Bruno. Sometimes, they were catastrophic instead of constructive, but they were -- by far -- the most fun.\\
-My friends who were always there for me (no matter how far sometimes) deserve a special thanks, since their presence in my life is beyond valuable.
-Among them are Bruno, Eliza, Sofia, Marco, Jo\~{a}o and Filipe, whom I would like to thank for the great moments we had (and for the many to come), and for making me feel always like home. Last, but not least, I would like to thank Ricardo for being around. \\  
-Finally, I would like to thank my family and my precious friend Eleni for their unconditional love and constant support. Without them, nothing would have been possible, so I would like to dedicate this thesis to them.
+Write the acknowledgments here.
 
 \vfill
 \begin{center}\begin{footnotesize}
-I acknowledge Funda\c{c}\~{a}o para a Ci\^{e}ncia e a Tecnologia (FCT, Portugal) for its support through the PhD grant PD/BD/52652/2014 in the context of the Doctoral Program in the Physics and Mathematics of Information (DP-PMI).\\
-I also acknowledge support from SQIG (Security and Quantum Information Group) in the Instituto de Telecomunica\c{c}\~{o}es (IT), Lisbon, namely through UID/EEA/50008/2013.
+I acknowledge Funda\c{c}\~{a}o para a Ci\^{e}ncia e a Tecnologia (FCT, Portugal) for its support through the PhD grant SFRH/BD/ 144806/2019 in the context of the Doctoral Program in the Information Security (IS).\\
+I also acknowledge support from SQIG (Security and Quantum Information Group) in the Instituto de Telecomunica\c{c}\~{o}es (IT), Lisbon, namely through UID/EEA/50008/2013. (CHECK THIS)
 \end{footnotesize}
 \end{center}
 
