--- a/Thesis_FrontCover.tex
+++ b/Thesis_FrontCover.tex
@@ -1,4 +1,3 @@
-
 \thispagestyle {empty}
 
 % IST Logo - Signature A
@@ -20,10 +19,10 @@
 % Title, author and degree
 \vspace{5.0cm}
 {\FontHb 
-Quantum walks in cryptography and finite-temperature topological phase transitions} \\
+Quantum assisted Secure Multiparty Computation} \\
 
 \vspace{3cm}
-{\FontLn Chrysoula Vlachou} \\
+{\FontLn Manuel Batalha dos Santos} \\
 \vspace{2cm}
 
 \end{center}
@@ -31,7 +30,7 @@ Quantum walks in cryptography and finite-temperature topological phase transitio
 
 
 {\FontMb Supervisor: \FontMn \qquad Doctor Paulo Alexandre Carreira Mateus} \\
-{\FontMb Co-Supervisor: \FontMn \hspace{.0em} Doctor Nikola Paunkovi\'c} \\
+{\FontMb Co-Supervisor: \FontMn \hspace{.0em} Doctor Armando Nolasco Pinto} \\
 
 \vspace{2.5cm}
 
@@ -40,16 +39,15 @@ Quantum walks in cryptography and finite-temperature topological phase transitio
 
 {\FontMn Thesis specifically prepared to obtain the PhD Degree in} \\
 %\vspace{0.3cm}
-{\FontMn Physics} \\
+{\FontMn Mathematics} \\
 %%previous spacing%%
 \vspace{1cm}
 %%current spacing%%
 %\vspace{1.5cm}
 {\FontLn Draft} \\
 \vspace{1cm}
-{\FontMb April 2018} \\
+{\FontMb January 2023} \\
 %
 \end{center}
 
 \cleardoublepage
-
