--- a/Thesis_Preamble.tex
+++ b/Thesis_Preamble.tex
@@ -135,7 +135,8 @@
 %\renewcommand{\baselinestretch}{1.4}
 
 % Remove indentation
-\setlength{\parindent}{0cm} % Default is 15pt.
+%\setlength{\parindent}{0cm} % Default is 15pt. % This was the default
+\setlength{\parindent}{15pt} % Default is 15pt.
 %\usepackage{parskip} % double-spacing between paragraphs
 %\usepackage{enumitem} % no spacing when using bullets
 %\setlist[itemize]{parsep=0pt}
