Working on Quantum Oblivious Transfer Chapter
Todo: finish QOT introduction

--- a/Chrysis.tex
+++ b/Chrysis.tex
@@ -113,8 +113,8 @@
 
 % My chapters
 \include{Introduction/Introduction}
-%\include{Chapter_TechnicalOverview}
-%\include{Chapter_QuantumObliviousTransfer}
+\include{Chapter_TechnicalOverview/Chapter_TechnicalOverview}
+\include{Chapter_QuantumObliviousTransfer}
 %\include{Chapter_QuantumAndClassicalObliviousTransfer}
 %\include{Chapter_QuantumObliviousLinearEvaluation}
 %\include{Chapter_QuantumAssistedSecureMultipartyComputationSystem}
