--- a/Introduction/Introduction.tex
+++ b/Introduction/Introduction.tex
@@ -15,7 +15,7 @@ The emerging fields of Data Mining and Data Analysis have deeply benefited from 
 
 To overcome the privacy-related issues described above, several privacy-enhancing technologies have been proposed \cite{Li2016, Armknecht2015, Yao82}. One important area of research is Secure Multiparty Computation (SMC). This technology allows a set of $n$ parties $P_i$ to jointly compute some function $f( x_1, ..., x_n ) = (y_1, ..., y_n)$ without disclosing their inputs to the other parties. The security requirements of SMC are equivalent to an ideal case, where every party $P_i$ sends his inputs to some independent and trusted third party, who computes $f()$ and sends back to each party their corresponding output.
 
-Since Yao seminal work \cite{Y86}, several SMC protocols have been developed, rendering different framework implementations \cite{Goldreich87, Bendlin11, D12}. However, they can generally be separated into two types according to the circuit logic being used: boolean or arithmetic. In each case, the efficiency and security of SMC heavily rely on the efficiency and security of important cryptographic primitives. Boolean-based SMC protocols rely on Oblivious Transfer (OT) \cite{K88} and arithmetic-based rely on Oblivious Linear Evaluation (OLE) \cite{DPSZ12}. Impagliazzo and Rudich \cite{IR99} proved that both OT and OLE protocols require public cryptography and cannot just rely on symmetric cryptography. This is an unfortunate result both from an efficiency and security perspective. Indeed, symmetric cryptography is lighter than asymmetric cryptography and requires less computational assumptions\cite{GetCitation}. Moreover, with the emergence of quantum computers, Shor’s algorithm \cite{Sho95} jeopardizes all the current public-key methods based on RSA, Elliptic Curves or Diffie-Hellman, in which many OT and OLE implementations rely on. This puts at risk the deployment of classical OT and OLE, which ultimately leads to the exposure of the SMC parties’ private inputs. Thus, it is essential to develop SMC methods secure against quantum computers while not compromising state-of-the-art performance levels.
+Since Yao seminal work \cite{Y86}, several SMC protocols have been developed, rendering different framework implementations \cite{Goldreich87, Bendlin11, D12}. However, they can generally be separated into two types according to the circuit logic being used: boolean or arithmetic. In each case, the efficiency and security of SMC heavily rely on the efficiency and security of important cryptographic primitives. Boolean-based SMC protocols rely on Oblivious Transfer (OT) \cite{K88} and arithmetic-based rely on Oblivious Linear Evaluation (OLE) \cite{DPSZ12}. Impagliazzo and Rudich \cite{IR99} proved that both OT and OLE protocols require public cryptography and cannot just rely on symmetric cryptography. This is an unfortunate result both from an efficiency and security perspective. Indeed, symmetric cryptography is lighter than asymmetric cryptography and requires less computational assumptions. Moreover, with the emergence of quantum computers, Shor’s algorithm \cite{Sho95} jeopardizes all the current public-key methods based on RSA, Elliptic Curves or Diffie-Hellman, in which many OT and OLE implementations rely on. This puts at risk the deployment of classical OT and OLE, which ultimately leads to the exposure of the SMC parties’ private inputs. Thus, it is essential to develop SMC methods secure against quantum computers while not compromising state-of-the-art performance levels.
 
 
 \section*{A Quantum Era}
