--- a/References.bib
+++ b/References.bib
@@ -2707,3 +2707,47 @@ keywords = {secure computation, oblivious transfer extensions, semi-honest adver
 location = {Berlin, Germany},
 series = {CCS '13}
 }
+
+@article{YAVV22,
+  doi = {10.1145/3503045},
+  url = {https://doi.org/10.1145/3503045},
+  year = {2022},
+  month = jan,
+  publisher = {Association for Computing Machinery ({ACM})},
+  author = {Vijay Kumar Yadav and Nitish Andola and Shekhar Verma and S Venkatesan},
+  title = {A Survey of Oblivious Transfer Protocol},
+  journal = {{ACM} Computing Surveys}
+}
+
+@inproceedings{IR89,
+author = {Impagliazzo, Russel and Rudich, Steven},
+title = {Limits on the Provable Consequences of One-Way Permutations},
+year = {1989},
+isbn = {0897913078},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/73007.73012},
+doi = {10.1145/73007.73012},
+booktitle = {Proceedings of the Twenty-First Annual ACM Symposium on Theory of Computing},
+pages = {44–61},
+numpages = {18},
+location = {Seattle, Washington, USA},
+series = {STOC '89}
+}
+
+@inproceedings{GKMRV00,
+  doi = {10.1109/sfcs.2000.892121},
+  url = {https://doi.org/10.1109/sfcs.2000.892121},
+  publisher = {{IEEE} Comput. Soc},
+  author = {Y. Gertner and S. Kannan and T. Malkin and O. Reingold and M. Viswanathan},
+  title = {The relationship between public key encryption and oblivious transfer},
+  booktitle = {Proceedings 41st Annual Symposium on Foundations of Computer Science},
+  year = {2000}
+}
+
+
+
+
+
+
+
