Working on Chapter 3 - QOT

--- a/References.bib
+++ b/References.bib
@@ -2746,6 +2746,129 @@ series = {STOC '89}
 }
 
 
+@inproceedings{B05,
+  doi = {10.1109/itwtpi.2005.1543949},
+  url = {https://doi.org/10.1109/itwtpi.2005.1543949},
+  publisher = {{IEEE}},
+  author = {G. Brassard},
+  title = {Brief history of quantum cryptography: a personal perspective},
+  booktitle = {{IEEE} Information Theory Workshop on Theory and Practice in Information-Theoretic Security.},
+  year = {2005}
+}
+
+@article{M06,
+  doi = {10.1007/s00450-006-0011-z},
+  url = {https://doi.org/10.1007/s00450-006-0011-z},
+  year = {2006},
+  month = sep,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {21},
+  number = {1-2},
+  pages = {39--54},
+  author = {J\"{o}rn M\"{u}ller-Quade},
+  title = {Quantum cryptography beyond key exchange},
+  journal = {Informatik - Forschung und Entwicklung}
+}
+
+@article{F10,
+  doi = {10.1007/s10701-010-9408-4},
+  url = {https://doi.org/10.1007/s10701-010-9408-4},
+  year = {2010},
+  month = jan,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {40},
+  number = {5},
+  pages = {494--531},
+  author = {Serge Fehr},
+  title = {Quantum Cryptography},
+  journal = {Foundations of Physics}
+}
+
+@article{B15,
+  doi = {10.1007/s10623-015-0157-4},
+  url = {https://doi.org/10.1007/s10623-015-0157-4},
+  year = {2015},
+  month = dec,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {78},
+  number = {1},
+  pages = {351--382},
+  author = {Anne Broadbent and Christian Schaffner},
+  title = {Quantum cryptography beyond quantum key distribution},
+  journal = {Designs,  Codes and Cryptography}
+}
+
+@article{PAB+20,
+  doi = {10.1364/aop.361502},
+  url = {https://doi.org/10.1364/aop.361502},
+  year = {2020},
+  month = dec,
+  publisher = {The Optical Society},
+  volume = {12},
+  number = {4},
+  pages = {1012},
+  author = {S. Pirandola and U. L. Andersen and L. Banchi and M. Berta and D. Bunandar and R. Colbeck and D. Englund and T. Gehring and C. Lupo and C. Ottaviani and J. L. Pereira and M. Razavi and J. Shamsul Shaari and M. Tomamichel and V. C. Usenko and G. Vallone and P. Villoresi and P. Wallden},
+  title = {Advances in quantum cryptography},
+  journal = {Advances in Optics and Photonics}
+}
+
+@misc{PR21,
+  doi = {10.48550/ARXIV.2102.00021},
+  url = {https://arxiv.org/abs/2102.00021},
+  author = {Portmann,  Christopher and Renner,  Renato},
+  keywords = {Quantum Physics (quant-ph),  Cryptography and Security (cs.CR),  Information Theory (cs.IT),  FOS: Physical sciences,  FOS: Physical sciences,  FOS: Computer and information sciences,  FOS: Computer and information sciences},
+  title = {Security in Quantum Cryptography},
+  publisher = {arXiv},
+  year = {2021},
+  copyright = {arXiv.org perpetual,  non-exclusive license}
+}
+
+@article{SH22,
+  doi = {10.3390/e24020260},
+  url = {https://doi.org/10.3390/e24020260},
+  year = {2022},
+  month = feb,
+  publisher = {{MDPI} {AG}},
+  volume = {24},
+  number = {2},
+  pages = {260},
+  author = {Shihai Sun and Anqi Huang},
+  title = {A Review of Security Evaluation of Practical Quantum Key Distribution System},
+  journal = {Entropy}
+}
+
+@InProceedings{BBCS92,
+author="Bennett, Charles H.
+and Brassard, Gilles
+and Cr{\'e}peau, Claude
+and Skubiszewska, Marie-H{\'e}l{\`e}ne",
+editor="Feigenbaum, Joan",
+title="Practical Quantum Oblivious Transfer",
+booktitle="Advances in Cryptology --- CRYPTO '91",
+year="1992",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="351--366",
+abstract="We describe a protocol for quantum oblivious transfer, utilizing faint pulses of polarized light, by which one of two mutually distrustful parties (``Alice'') transmits two one-bit messages in such a way that the other party (``Bob'') can choose which message he gets but cannot obtain information about both messages (he will learn his chosen bit's value with exponentially small error probability and may gain at most exponentially little information about the value of the other bit), and Alice will be entirely ignorant of which bit he received. Neither party can cheat (ie deviate from the protocol while appearing to follow it) in such a way as to obtain more information than what is given by the description of the protocol. Our protocol is easy to modify in order to implement the All-or-Nothing Disclosure of one out of two string messages, and it can be used to implement bit commitment and oblivious circuit evaluation without complexity-theoretic assumptions, in a way that remains secure even against cheaters that have unlimited computing power. Moreover, this protocol is practical in that it can be realized with available optoelectronic apparatus while being immune to any technologically feasible attack for the foreseeable future.",
+isbn="978-3-540-46766-3"
+}
+
+@inbook{S99,
+    author="Salvail, Louis",
+    editor="Damg{\aa}rd, Ivan Bjerre",
+    title="The Search for the Holy Grail in Quantum Cryptography",
+    bookTitle="Lectures on Data Security: Modern Cryptology in Theory and Practice",
+    year="1999",
+    publisher="Springer Berlin Heidelberg",
+    address="Berlin, Heidelberg",
+    pages="183--216",
+    abstract="In 1982, Bennett and Brassard suggested a new way to provide privacy in long distance communications with security based on the correctness of the basic principles of quantum mechanics. The scheme allows two parties, Alice and Bob, sharing no secret information in the first place, to exchange messages that nobody else can figure out. The only requirement is a quantum channel and a normal phone line connecting the two parties. The fact that quantum mechanics provides unconditional secure communications is a remarkable result that cannot be achieved by classical techniques alone. Apart from secure communication, cryptography is also interested in tasks that aim at protecting one party against a potentially dishonest peer. This scenario, called secure twoparty computation, is usually modelled by a function f(xA,xB) where xA and xB are Alice's and Bob's secret input respectively. They would like to execute a protocol that produces z = f(xA,xB) to both parties without disclosing their secret input to the other party. The only information about a secret input that can be leaked toward the other party is what the output z itself discloses about it. Unlike secure communication, secure two-party computation does not assume that Alice and Bob are honest. One honest party's input should remain secret whatever the other party's behaviour. It is well-known that in order to find a protocol for secure two-party computation, one must have access to a secure bit commitment scheme. Unfortunately, in 1996 Mayers showed that no secure quantum bit commitment scheme exists. Similarly to the classical case (where trapdoor one-way functions are needed) quantum cryptography does not provide secure two-party computation for free. In this paper, we discuss the possibilities and limits of quantum cryptography for two-party computation. We describe the essential distinctions between classical and quantum cryptography in this scenario.",
+    isbn="978-3-540-48969-6",
+    doi="10.1007/3-540-48969-X_9",
+    url="https://doi.org/10.1007/3-540-48969-X_9"
+}
+
+
 
 
 
