--- a/Thesis_Preamble.tex
+++ b/Thesis_Preamble.tex
@@ -639,3 +639,84 @@
 \newcommand{\innerproduct}[2]{\langle #1 | #2 \rangle}
 \def\mobh{\textlatin{M\"ob}({\mathbb H})}
 \def\span{span}
+
+% My packages
+\usepackage[most]{tcolorbox}
+
+
+\newcommand{\red}[1]{%
+{\color{red}#1}}
+\newcommand{\green}[1]{%
+{\color{green}#1}}
+
+\usepackage{tikz}
+
+% to change colors
+\newcommand{\fillcol}{white}
+\newcommand{\bordercol}{red}
+\newcommand{\bordercolgreen}{green}
+
+%% code by Andrew Stacey 
+% https://tex.stackexchange.com/questions/51582/background-coloring-with-overlay-specification-in-algorithm2e-beamer-package#51582
+
+\makeatletter
+\tikzset{%
+     remember picture with id/.style={%
+       remember picture,
+       overlay,
+       %draw=\bordercol,
+       save picture id=#1,
+     },
+     save picture id/.code={%
+       \edef\pgf@temp{#1}%
+       \immediate\write\pgfutil@auxout{%
+         \noexpand\savepointas{\pgf@temp}{\pgfpictureid}}%
+     },
+     if picture id/.code args={#1#2#3}{%
+       \@ifundefined{save@pt@#1}{%
+         \pgfkeysalso{#3}%
+       }{
+         \pgfkeysalso{#2}%
+       }
+     }
+   }
+
+   \def\savepointas#1#2{%
+  \expandafter\gdef\csname save@pt@#1\endcsname{#2}%
+}
+
+\def\tmk@labeldef#1,#2\@nil{%
+  \def\tmk@label{#1}%
+  \def\tmk@def{#2}%
+}
+
+\tikzdeclarecoordinatesystem{pic}{%
+  \pgfutil@in@,{#1}%
+  \ifpgfutil@in@%
+    \tmk@labeldef#1\@nil
+  \else
+    \tmk@labeldef#1,(0pt,0pt)\@nil
+  \fi
+  \@ifundefined{save@pt@\tmk@label}{%
+    \tikz@scan@one@point\pgfutil@firstofone\tmk@def
+  }{%
+  \pgfsys@getposition{\csname save@pt@\tmk@label\endcsname}\save@orig@pic%
+  \pgfsys@getposition{\pgfpictureid}\save@this@pic%
+  \pgf@process{\pgfpointorigin\save@this@pic}%
+  \pgf@xa=\pgf@x
+  \pgf@ya=\pgf@y
+  \pgf@process{\pgfpointorigin\save@orig@pic}%
+  \advance\pgf@x by -\pgf@xa
+  \advance\pgf@y by -\pgf@ya
+  }%
+}
+\makeatother
+
+\newcommand{\tikzmarkin}[1]{%
+      \tikz[remember picture with id=#1]
+      \draw[line width=1pt,rectangle,rounded corners,fill=\fillcol]
+      (pic cs:#1) ++(0.065,-0.15) rectangle (-0.05,0.32)
+      ;}
+
+\newcommand\tikzmarkend[2][]{%
+\tikz[remember picture with id=#2] #1;}
