Working On QOT chapter
Erase WSE protocol. Not required.

--- a/Thesis_Preamble.tex
+++ b/Thesis_Preamble.tex
@@ -640,9 +640,10 @@
 \def\mobh{\textlatin{M\"ob}({\mathbb H})}
 \def\span{span}
 
-% My packages
-\usepackage[most]{tcolorbox}
+%==================================== My packages ====================================
 
+%% For oblivious keys example =============================================================
+\usepackage[most]{tcolorbox}
 
 \newcommand{\red}[1]{%
 {\color{red}#1}}
@@ -720,3 +721,9 @@
 
 \newcommand\tikzmarkend[2][]{%
 \tikz[remember picture with id=#2] #1;}
+
+% ===================================================================
+
+\usepackage{dsfont}
+
+\newcommand{\cv}{\color{blue}}
