QOT chapter finished (First Version)

--- a/References/References.bib
+++ b/References/References.bib
@@ -2662,3 +2662,71 @@ location = {Berlin, Germany},
 series = {CCS '13}
 }
 
+@article{LCT14,
+  doi = {10.1038/nphoton.2014.149},
+  url = {https://doi.org/10.1038/nphoton.2014.149},
+  year = {2014},
+  month = jul,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {8},
+  number = {8},
+  pages = {595--604},
+  author = {Hoi-Kwong Lo and Marcos Curty and Kiyoshi Tamaki},
+  title = {Secure quantum key distribution},
+  journal = {Nature Photonics}
+}
+
+@article{Pirandola2020,
+  doi = {10.1364/aop.361502},
+  url = {https://doi.org/10.1364/aop.361502},
+  year = {2020},
+  month = dec,
+  publisher = {The Optical Society},
+  volume = {12},
+  number = {4},
+  pages = {1012},
+  author = {S. Pirandola and U. L. Andersen and L. Banchi and M. Berta and D. Bunandar and R. Colbeck and D. Englund and T. Gehring and C. Lupo and C. Ottaviani and J. L. Pereira and M. Razavi and J. Shamsul Shaari and M. Tomamichel and V. C. Usenko and G. Vallone and P. Villoresi and P. Wallden},
+  title = {Advances in quantum cryptography},
+  journal = {Advances in Optics and Photonics}
+}
+
+@article{MH05,
+  doi = {10.1080/09500340410001730986},
+  url = {https://doi.org/10.1080/09500340410001730986},
+  year = {2005},
+  month = mar,
+  publisher = {Informa {UK} Limited},
+  volume = {52},
+  number = {5},
+  pages = {691--705},
+  author = {Vadim Makarov and Dag R. Hjelme},
+  title = {Faked states attack on quantum cryptosystems},
+  journal = {Journal of Modern Optics}
+}
+
+@article{GFKZR06,
+  doi = {10.1103/physreva.73.022320},
+  url = {https://doi.org/10.1103/physreva.73.022320},
+  year = {2006},
+  month = feb,
+  publisher = {American Physical Society ({APS})},
+  volume = {73},
+  number = {2},
+  author = {N. Gisin and S. Fasel and B. Kraus and H. Zbinden and G. Ribordy},
+  title = {Trojan-horse attacks on quantum-key-distribution systems},
+  journal = {Physical Review A}
+}
+
+@article{JSKEML16,
+  doi = {10.1080/00107514.2016.1148333},
+  url = {https://doi.org/10.1080/00107514.2016.1148333},
+  year = {2016},
+  month = mar,
+  publisher = {Informa {UK} Limited},
+  volume = {57},
+  number = {3},
+  pages = {366--387},
+  author = {Nitin Jain and Birgit Stiller and Imran Khan and Dominique Elser and Christoph Marquardt and Gerd Leuchs},
+  title = {Attacks on practical quantum key distribution systems (and how to prevent them)},
+  journal = {Contemporary Physics}
+}
