Working on q&c OT comparison

--- a/Chrysis.tex
+++ b/Chrysis.tex
@@ -117,7 +117,7 @@
 \include{Introduction/Introduction}
 \include{Chapter_TechnicalOverview/Chapter_TechnicalOverview}
 \include{Chapter_QuantumObliviousTransfer/Chapter_QuantumObliviousTransfer}
-%\include{Chapter_QuantumAndClassicalObliviousTransfer}
+\include{Chapter_QuantumAndClassicalObliviousTransfer/Chapter_QuantumAndClassicalObliviousTransfer}
 %\include{Chapter_QuantumObliviousLinearEvaluation}
 %\include{Chapter_QuantumAssistedSecureMultipartyComputationSystem}
 
