--- a/Introduction/Introduction.tex
+++ b/Introduction/Introduction.tex
@@ -48,6 +48,8 @@ Despite these constraints, we compare the complexity and operations efficiency o
 
 We make a detailed comparison between the complexity of the online phase of two state-of-the-art classical OT protocols \cite{ALSZ13, KOS15} and an optimized quantum OT protocol. We conclude that the online phase of quantum OT competes with its classical counterparts and has the potential to be more efficient.
 
+{\cv Convetion issue: use precomputation phase instead of offline; use transfer phase instead of online.}
+
 \
 
 \noindent\textbf{Quantum oblivious linear evaluation protocol.} Our second contribution is a quantum protocol for OLE with quantum universally composable (quantum-UC) security in the $\mathcal{F}_{\textbf{COM}}-$hybrid model, i.e. when assuming the existence of a commitment functionality, $\mathcal{F}_{\textbf{COM}}$. To obtain a secure protocol, we take advantage of the properties of Mutually Unbiased Bases in high-dimensional Hilbert spaces with prime and prime-power dimension. Such a choice is motivated by recent theoretical and experimental advances that pave the way for the development and realization of new solutions for quantum cryptography \cite{BPT00,DEBZ10,Zhongetal2015,BHVBFHM18,DHMPPV21}. 
@@ -73,7 +75,7 @@ The results are presented as follows. We start presenting SMC protocols based on
 This thesis is based on research published in various journals. During my PhD I was involved in the following projects.
 
 \begin{itemize}
-	\item\cite{SPM21} Manuel B. Santos, Paulo Mateus, and Armando N. Pinto. “Quantum Oblivious Transfer:
+	\item\cite{SMP22} Manuel B. Santos, Paulo Mateus, and Armando N. Pinto. “Quantum Oblivious Transfer:
 A Short Review”. In: Entropy 24.7 (July 2022), p. 945.
 
 	\item\cite{SPM21} Manuel B. Santos, Armando N. Pinto, and Paulo Mateus. “Quantum and classical
@@ -93,7 +95,7 @@ Networks (ICTON). IEEE, July 2020.
 \end{itemize}
 
 
-Chapter 4 is based on \cite{SPM21}. Chapter 5 is based on the work developed on both \cite{SPM21} and \cite{SGPM22}. Chapter 6 presents all the results from \cite{SMV22}. Finally, Chapter 7 is the combination of \cite{SGPM22, SGPM21, POS+20}
+Chapter 4 is based on \cite{SMP22}. Chapter 5 is based on the work developed on both \cite{SPM21} and \cite{SGPM22}. Chapter 6 presents all the results from \cite{SMV22}. Finally, Chapter 7 is the combination of \cite{SGPM22, SGPM21, POS+20}
 
 %\bibliography{bibforthesis}
 %\bibliographystyle{unsrt}
