Working on C&Q comparison

--- a/References/References.bib
+++ b/References/References.bib
@@ -2730,3 +2730,70 @@ series = {CCS '13}
   title = {Attacks on practical quantum key distribution systems (and how to prevent them)},
   journal = {Contemporary Physics}
 }
+
+@inproceedings{BM89,
+author = {Bellare, Mihir and Micali, Silvio},
+title = {Non-Interactive Oblivious Transfer and Applications},
+year = {1989},
+isbn = {0387973176},
+publisher = {Springer-Verlag},
+address = {Berlin, Heidelberg},
+booktitle = {Proceedings on Advances in Cryptology},
+pages = {547-557},
+numpages = {11},
+keywords = {cryptography, electronic signatures, electronic funds transfer, receipts, public key cryptosystem, authentication, digital signatures},
+location = {Santa Barbara, California, USA},
+series = {CRYPTO -89}
+}
+
+@ARTICLE{PH78, author={S. {Pohlig} and M. {Hellman}}, journal={IEEE Transactions on Information Theory}, title={An improved algorithm for computing logarithms over GF(p) and its cryptographic significance (Corresp.)}, year={1978}, volume={24}, number={1}, pages={106-110}}
+
+@ARTICLE{S71, author={D. {Shanks}}, journal={In Proc. Symp. Pure Math., Providence, R.I.: American Mathematical Society}, title={Class number, a theory of factorization and genera}, year={1971}, volume={20}, pages={415-440},}
+
+@article{P78
+,author={John M. Pollard}
+,ISSN={0025--5718}
+,journal={Mathematics of Computation}
+,MR={58:10684}
+,pages={918--924}
+,title={{Monte Carlo methods for index computation mod $p$}}
+,volume={32}
+,year={1978}
+}
+
+@inproceedings{ABDGGHHSTVVWZZ15,
+author = {Adrian, David and Bhargavan, Karthikeyan and Durumeric, Zakir and Gaudry, Pierrick and Green, Matthew and Halderman, J. Alex and Heninger, Nadia and Springall, Drew and Thom\'{e}, Emmanuel and Valenta, Luke and VanderSloot, Benjamin and Wustrow, Eric and Zanella-B\'{e}guelin, Santiago and Zimmermann, Paul},
+title = {Imperfect Forward Secrecy: How Diffie-Hellman Fails in Practice},
+year = {2015},
+isbn = {9781450338325},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2810103.2813707},
+doi = {10.1145/2810103.2813707},
+booktitle = {Proceedings of the 22nd ACM SIGSAC Conference on Computer and Communications Security},
+pages = {5-17},
+numpages = {13},
+keywords = {vulnerabilities, number field sieve, internet measurement, logjam, Diffie-Hellman},
+location = {Denver, Colorado, USA},
+series = {CCS '15}
+}
+
+@Article{Bernstein2017,
+	Author = {Bernstein, Daniel J. and Lange, Tanja},
+	Da = {2017/09/01},
+	Date-Added = {2020-03-22 18:28:02 +0000},
+	Date-Modified = {2020-03-22 18:28:02 +0000},
+	Doi = {10.1038/nature23461},
+	Id = {Bernstein2017},
+	Isbn = {1476-4687},
+	Journal = {Nature},
+	Number = {7671},
+	Pages = {188--194},
+	Title = {Post-quantum cryptography},
+	Ty = {JOUR},
+	Url = {https://doi.org/10.1038/nature23461},
+	Volume = {549},
+	Year = {2017},
+	Bdsk-Url-1 = {https://doi.org/10.1038/nature23461},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1038/nature23461}
+}
