--- a/Thesis_Preamble.tex
+++ b/Thesis_Preamble.tex
@@ -729,4 +729,7 @@
 \newcommand{\cv}{\color{blue}}
 
 \newcommand\rotPi{\rotatebox[origin=c]{180}{$\Pi$}}
- \usepackage{physics}
+\usepackage{physics}
+
+\usepackage{multirow}
+\usepackage{booktabs}
