Working on C&Q comparison

--- a/References/References.bib
+++ b/References/References.bib
@@ -2797,3 +2797,18 @@ series = {CCS '15}
 	Bdsk-Url-1 = {https://doi.org/10.1038/nature23461},
 	Bdsk-Url-2 = {http://dx.doi.org/10.1038/nature23461}
 }
+
+@article{Pirandola20,
+author = {S. Pirandola and U. L. Andersen and L. Banchi and M. Berta and D. Bunandar and R. Colbeck and D. Englund and T. Gehring and C. Lupo and C. Ottaviani and J. L. Pereira and M. Razavi and J. Shamsul Shaari and M. Tomamichel and V. C. Usenko and G. Vallone and P. Villoresi and P. Wallden},
+journal = {Adv. Opt. Photon.},
+keywords = {Dense wavelength division multiplexing; Entanglement distribution; Periodically poled lithium niobate; Quantum communications; Quantum cryptography; Quantum light sources},
+number = {4},
+pages = {1012--1236},
+publisher = {OSA},
+title = {Advances in quantum cryptography},
+volume = {12},
+month = {Dec},
+year = {2020},
+url = {http://aop.osa.org/abstract.cfm?URI=aop-12-4-1012},
+doi = {10.1364/AOP.361502},
+}
