Finished 1st version of Q&C
TODO:

- Reread everything

--- a/Chrysis.tex
+++ b/Chrysis.tex
@@ -118,8 +118,9 @@
 \include{Chapter_TechnicalOverview/Chapter_TechnicalOverview}
 \include{Chapter_QuantumObliviousTransfer/Chapter_QuantumObliviousTransfer}
 \include{Chapter_QuantumAndClassicalObliviousTransfer/Chapter_QuantumAndClassicalObliviousTransfer}
-%\include{Chapter_QuantumObliviousLinearEvaluation}
+\include{Chapter_QuantumObliviousLinearEvaluation}
 %\include{Chapter_QuantumAssistedSecureMultipartyComputationSystem}
+%\include{Conclusions/Conclusions}
 
 % Chryshoula chapters
 %\include{Chapter_Publickey}
