--- a/References/References.bib
+++ b/References/References.bib
@@ -2645,23 +2645,6 @@ doi = {10.1364/OE.26.031925}
   url = {https://link.aps.org/doi/10.1103/PhysRevApplied.15.034003}
 }
 
-@inproceedings{ALSZ13,
-author = {Asharov, Gilad and Lindell, Yehuda and Schneider, Thomas and Zohner, Michael},
-title = {More Efficient Oblivious Transfer and Extensions for Faster Secure Computation},
-year = {2013},
-isbn = {9781450324779},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-url = {https://doi.org/10.1145/2508859.2516738},
-doi = {10.1145/2508859.2516738},
-booktitle = {Proceedings of the 2013 ACM SIGSAC Conference on Computer \& Communications Security},
-pages = {535-548},
-numpages = {14},
-keywords = {secure computation, oblivious transfer extensions, semi-honest adversaries},
-location = {Berlin, Germany},
-series = {CCS '13}
-}
-
 @article{LCT14,
   doi = {10.1038/nphoton.2014.149},
   url = {https://doi.org/10.1038/nphoton.2014.149},
@@ -2811,4 +2794,181 @@ month = {Dec},
 year = {2020},
 url = {http://aop.osa.org/abstract.cfm?URI=aop-12-4-1012},
 doi = {10.1364/AOP.361502},
+}
+
+@book{MVV01,
+  added-at = {2007-04-16T14:16:26.000+0200},
+  author = {Menezes, Alfred J. and van Oorschot, Paul C. and Vanstone, Scott A.},
+  biburl = {https://www.bibsonomy.org/bibtex/21fb86a3afb62bbb4bc2f94a0299a4d59/kidloc},
+  interhash = {d5837a554ce2ffd49f551045400e244c},
+  intrahash = {1fb86a3afb62bbb4bc2f94a0299a4d59},
+  keywords = {cryptography handbook programming reference security},
+  publisher = {CRC Press},
+  timestamp = {2007-04-16T14:16:26.000+0200},
+  title = {Handbook of Applied Cryptography},
+  url = {http://www.cacr.math.uwaterloo.ca/hac/},
+  year = 2001
+}
+
+@article{G11,
+author = {Gueron, Shay},
+year = {2011},
+month = {01},
+pages = {239},
+title = {Efficient Software Implementations of Modular Exponentiation.},
+volume = {2011},
+journal = {IACR Cryptology ePrint Archive},
+doi = {10.1007/s13389-012-0031-5}
+}
+
+@inproceedings{B96,
+author = {Beaver, Donald},
+title = {Correlated Pseudorandomness and the Complexity of Private Computations},
+year = {1996},
+isbn = {0897917855},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/237814.237996},
+doi = {10.1145/237814.237996},
+booktitle = {Proceedings of the Twenty-Eighth Annual ACM Symposium on Theory of Computing},
+pages = {479-488},
+numpages = {10},
+location = {Philadelphia, Pennsylvania, USA},
+series = {STOC '96}
+}
+
+@article{N07,
+author = {Nielsen, Jesper},
+year = {2007},
+month = {01},
+pages = {215},
+title = {Extending Oblivious Transfers Efficiently - How to get Robustness Almost for Free.},
+volume = {2007},
+journal = {IACR Cryptology ePrint Archive}
+}
+
+@article{NNOB12,
+author = {Nielsen, Jesper and Nordholt, Peter and Orlandi, Claudio and Burra, Sai},
+year = {2012},
+month = {02},
+pages = {},
+title = {A New Approach to Practical Active-Secure Two-Party Computation},
+volume = {8},
+doi = {10.1007/978-3-642-32009-5_40}
+}
+
+@inproceedings{ALSZ13,
+author = {Asharov, Gilad and Lindell, Yehuda and Schneider, Thomas and Zohner, Michael},
+title = {More Efficient Oblivious Transfer and Extensions for Faster Secure Computation},
+year = {2013},
+isbn = {9781450324779},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2508859.2516738},
+doi = {10.1145/2508859.2516738},
+booktitle = {Proceedings of the 2013 ACM SIGSAC Conference on Computer \& Communications Security},
+pages = {535-548},
+numpages = {14},
+keywords = {secure computation, oblivious transfer extensions, semi-honest adversaries},
+location = {Berlin, Germany},
+series = {CCS '13}
+}
+
+@InProceedings{ALSZ15,
+author={Asharov, Gilad
+and Lindell, Yehuda
+and Schneider, Thomas
+and Zohner, Michael},
+editor={Oswald, Elisabeth
+and Fischlin, Marc},
+title={More Efficient Oblivious Transfer Extensions with Security for Malicious Adversaries},
+booktitle={Advances in Cryptology -- EUROCRYPT 2015},
+year={2015},
+publisher={Springer Berlin Heidelberg},
+address={Berlin, Heidelberg},
+pages={673--701},
+isbn={978-3-662-46800-5}
+}
+
+@inproceedings{IKNP03,
+author = {Ishai, Yuval and Kilian, Joe and Nissim, Kobbi and Petrank, Erez},
+title = {Extending Oblivious Transfers Efficiently},
+year = {2003},
+month = {06},
+pages = {},
+journal = {Lecture Notes in Computer Science},
+doi = {10.1007/978-3-540-45146-4_9}
+}
+
+@inproceedings{PST19,
+  title={Benchmarking post-quantum cryptography in tls},
+  author={Paquin, Christian and Stebila, Douglas and Tamvada, Goutam},
+  booktitle={International Conference on Post-Quantum Cryptography},
+  pages={72--91},
+  year={2020},
+  organization={Springer}
+}
+
+@inproceedings{MR19,
+author = {Mansy, Daniel and Rindal, Peter},
+title = {Endemic Oblivious Transfer},
+year = {2019},
+isbn = {9781450367479},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3319535.3354210},
+doi = {10.1145/3319535.3354210},
+pages = {309–326},
+numpages = {18},
+keywords = {extension, oblivious transfer},
+location = {London, United Kingdom},
+series = {CCS '19}
+}
+
+@article{CrystalKyber17,
+  title={Crystals-kyber},
+  author={Avanzi, Roberto and Bos, Joppe and Ducas, L{\'e}o and Kiltz, Eike and Lepoint, Tancrede and Lyubashevsky, Vadim and Schanck, John M and Schwabe, Peter and Seiler, Gregor and Stehl{\'e}, Damien},
+  journal={NIST, Tech. Rep},
+  year={2017}
+}
+
+@article{NTRUOT1,
+  title={Oblivious Transfer Based on NTRUEncrypt},
+  author={Bo Mi and Darong Huang and Shaohua Wan and Libo Mi and J. Cao},
+  journal={IEEE Access},
+  year={2018},
+  volume={6},
+  pages={35283-35291}
+}
+
+
+@article{NTRUOT2,
+title = {A post-quantum light weight 1-out-n oblivious transfer protocol},
+journal = {Computers \& Electrical Engineering},
+volume = {75},
+pages = {90-100},
+year = {2019},
+issn = {0045-7906},
+doi = {https://doi.org/10.1016/j.compeleceng.2019.01.021},
+url = {https://www.sciencedirect.com/science/article/pii/S0045790618322663},
+author = {Bo Mi and Darong Huang and Shaohua Wan and Yu Hu and Kim-Kwang Raymond Choo},
+keywords = {Oblivious transfer, NTRU, Privacy-preserving, Post-quantum security, Universal composability},
+}
+
+@InProceedings{NTRU,
+author="Hirschhorn, Philip S.
+and Hoffstein, Jeffrey
+and Howgrave-Graham, Nick
+and Whyte, William",
+editor="Abdalla, Michel
+and Pointcheval, David
+and Fouque, Pierre-Alain
+and Vergnaud, Damien",
+title="Choosing NTRUEncrypt Parameters in Light of Combined Lattice Reduction and MITM Approaches",
+booktitle="Applied Cryptography and Network Security",
+year="2009",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="437--455",
+isbn="978-3-642-01957-9"
 }
