--- a/Thesis_Preamble.tex
+++ b/Thesis_Preamble.tex
@@ -738,3 +738,13 @@
 \setlength\stripsep{3pt plus 1pt minus 1pt}
 %\usepackage{breqn}
 
+\usepackage{listings}
+\usepackage{xcolor}
+\lstset { %
+    language=C++,
+    backgroundcolor=\color{black!5}, % set backgroundcolor
+    basicstyle=\footnotesize,% basic font setting
+}
+
+\usepackage[toc,page]{appendix}
+
